updated blogpost header img for better responsiveness, no longer hidden on small screens

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -363,6 +363,7 @@ a {
     background-color: var(--main-color-three);
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 
 .blog-date {
